--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "chinese"
   ],
   "author": "Hannes",
-  "license": "MIT",
+  "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-json": "^4.0.2",
