--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^2.0.2",
     "rollup": "^2.3.2",
+    "rollup-plugin-uglify": "^6.0.4",
     "typescript": "^3.8.3"
   }
 }
